--- a/src/main/webapp/pages/ManageSubscriptions/ManageSubscriptions.html
+++ b/src/main/webapp/pages/ManageSubscriptions/ManageSubscriptions.html
@@ -1,56 +1,60 @@
-<wm-page data-ng-controller="ManageSubscriptionsPageController" pagetitle="Manage Subscriptions" name="page1"> 
- <wm-header content="header" name="header1"></wm-header> 
- <wm-top-nav content="topnav" name="top_nav1"></wm-top-nav> 
- <wm-content name="content1"> 
-  <wm-left-panel columnwidth="2" content="leftnav" name="left_panel1"></wm-left-panel> 
-  <wm-page-content columnwidth="10" name="page_content1"> 
-   <wm-layoutgrid name="layoutgrid2"> 
-    <wm-gridrow name="gridrow3"> 
-     <wm-gridcolumn columnwidth="12" name="gridcolumn4"> 
-      <wm-breadcrumb dataset="bind:Variables.BreadCrum.dataSet" name="breadcrumb1" itemlabel="label" itemicon="icon" itemlink="link"></wm-breadcrumb> 
-     </wm-gridcolumn> 
-    </wm-gridrow> 
-    <wm-gridrow name="gridrow4"> 
-     <wm-gridcolumn columnwidth="12" name="gridcolumn6"> 
-      <wm-panel iconclass="wi wi-account-box" autoclose="outsideClick" name="panel1" title="All CX Subscriptions" class="panel-primary"> 
-       <wm-livegrid formlayout="dialog" name="livegrid1"> 
-        <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.Cx2UserSubscriptionsData.dataSet" navigation="Classic" name="grid2" filtermode="multicolumn" exportformat="EXCEL" showrecordcount="true"> 
-         <wm-grid-column binding="municipalities.municipalityName" caption="Municipality" type="string" generator="assigned" show="true" related-entity-name="Municipalities" readonly="false"></wm-grid-column> 
-         <wm-grid-column binding="users.fullName" caption="Name" type="string" primary-key="false" generator="assigned" readonly="true" show="true" related-entity-name="Users"></wm-grid-column> 
-         <wm-grid-column binding="users.email" caption="Email Address" type="string" generator="assigned" show="true" related-entity-name="Users" readonly="false"></wm-grid-column> 
-         <wm-grid-column binding="dateSubscribed" caption="Date Subscribed" type="timestamp" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" show="true" filterwidget="text" readonly="false"></wm-grid-column> 
-         <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column> 
-         <wm-grid-action key="addNewRow" display-name="New Subscription" show="true" class="btn-primary" iconclass="wi wi-plus" title="New Subscription" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action> 
-         <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action> 
-        </wm-grid> 
-        <wm-liveform novalidate="false" errormessage="That user is already subscribed to the selected municipality." title="Create Subscription" formlayout="dialog" iconclass="wi wi-account-box" dataset="bind:Variables.Cx2UserSubscriptionsData.dataSet" captionalign="left" captionposition="top" name="liveform2"> 
-         <wm-layoutgrid columns="1" name="layoutgrid3"> 
-          <wm-gridrow name="gridrow5"> 
-           <wm-gridcolumn columnwidth="12" name="gridcolumn6_1"> 
-            <wm-form-field name="municipalities" displayname="Municipality" show="true" primary-key="false" generator="assigned" key="municipalities" type="list" is-related="true" required="required" widget="select" placeholder="Select Municipality" displayexpression="municipalityName" orderby="municipalityName:asc"></wm-form-field> 
-           </wm-gridcolumn> 
-          </wm-gridrow> 
-          <wm-gridrow name="gridrow5_2"> 
-           <wm-gridcolumn columnwidth="12" name="gridcolumn7"> 
-            <wm-form-field name="users" displayname="User" show="true" primary-key="false" generator="assigned" key="users" type="list" is-related="true" required="required" widget="autocomplete" placeholder="Search by Name or Email Address" displaylabel="fullName+' ('+email+')'" orderby="fullName:asc" searchkey="fullName,email"></wm-form-field> 
-           </wm-gridcolumn> 
-          </wm-gridrow> 
-          <wm-gridrow name="gridrow5_1"> 
-           <wm-gridcolumn name="gridcolumn1" columnwidth="12"> 
-            <wm-form-field name="dateSubscribed" displayname="Date Subscribed" show="true" primary-key="false" generator="assigned" key="dateSubscribed" type="timestamp" readonly="readonly" widget="date" maxchars="255" defaultvalue="CURRENT_DATE" datepattern="MM-dd-yyyy" placeholder="Select date" outputformat="timestamp"></wm-form-field> 
-           </wm-gridcolumn> 
-          </wm-gridrow> 
-         </wm-layoutgrid> 
-         <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="readonly" required="required" step="0" widget="number" inputtype="number" placeholder=""></wm-form-field> 
-         <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-primary" iconclass="wi wi-save" title="Save" disabled="false" type="submit" update-mode="true"></wm-form-action> 
-         <wm-form-action key="cancel" display-name="Cancel" show="true" class="form-cancel btn-secondary" iconclass="wi wi-cancel" title="Cancel" action="cancel()" disabled="false" type="button" update-mode="true"></wm-form-action> 
-        </wm-liveform> 
-       </wm-livegrid> 
-      </wm-panel> 
-     </wm-gridcolumn> 
-    </wm-gridrow> 
-   </wm-layoutgrid> 
-  </wm-page-content> 
- </wm-content> 
- <wm-footer content="footer" name="footer1"></wm-footer> 
+<wm-page data-ng-controller="ManageSubscriptionsPageController" pagetitle="Manage Subscriptions" name="page1">
+    <wm-header content="header" name="header1"></wm-header>
+    <wm-top-nav content="topnav" name="top_nav1"></wm-top-nav>
+    <wm-content name="content1">
+        <wm-left-panel columnwidth="2" content="leftnav" name="left_panel1"></wm-left-panel>
+        <wm-page-content columnwidth="10" name="page_content1">
+            <wm-layoutgrid name="layoutgrid2">
+                <wm-gridrow name="gridrow3">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn4">
+                        <wm-breadcrumb dataset="bind:Variables.BreadCrum.dataSet" name="breadcrumb1" itemlabel="label" itemicon="icon" itemlink="link"></wm-breadcrumb>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow4">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn6">
+                        <wm-panel iconclass="wi wi-library-add" autoclose="outsideClick" name="panel1" title="All CX Subscriptions" class="panel-primary">
+                            <wm-livegrid formlayout="dialog" name="livegrid1">
+                                <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.Cx2UserSubscriptionsData.dataSet" navigation="Classic" name="grid2" filtermode="multicolumn" exportformat="EXCEL" showrecordcount="true">
+                                    <wm-grid-column binding="municipalities.municipalityName" caption="Municipality" type="string" generator="assigned" show="true" related-entity-name="Municipalities" readonly="false"></wm-grid-column>
+                                    <wm-grid-column binding="users.fullName" caption="Name" type="string" primary-key="false" generator="assigned" readonly="true" show="true" related-entity-name="Users"></wm-grid-column>
+                                    <wm-grid-column binding="users.email" caption="Email Address" type="string" generator="assigned" show="true" related-entity-name="Users" readonly="false"></wm-grid-column>
+                                    <wm-grid-column binding="dateSubscribed" caption="Date Subscribed" type="timestamp" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" show="true" filterwidget="text" readonly="false"></wm-grid-column>
+                                    <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
+                                    <wm-grid-action key="addNewRow" display-name="New Subscription" show="true" class="btn-primary" iconclass="wi wi-plus" title="New Subscription" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
+                                    <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
+                                </wm-grid>
+                                <wm-liveform novalidate="false" errormessage="That user is already subscribed to the selected municipality." title="Create Subscription" formlayout="dialog" iconclass="wi wi-account-box" dataset="bind:Variables.Cx2UserSubscriptionsData.dataSet"
+                                captionalign="left" captionposition="top" name="liveform2">
+                                    <wm-layoutgrid columns="1" name="layoutgrid3">
+                                        <wm-gridrow name="gridrow5">
+                                            <wm-gridcolumn columnwidth="12" name="gridcolumn6_1">
+                                                <wm-form-field name="municipalities" displayname="Municipality" show="true" primary-key="false" generator="assigned" key="municipalities" type="list" is-related="true" required="required" widget="select" placeholder="Select Municipality"
+                                                displayexpression="municipalityName" orderby="municipalityName:asc"></wm-form-field>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
+                                        <wm-gridrow name="gridrow5_2">
+                                            <wm-gridcolumn columnwidth="12" name="gridcolumn7">
+                                                <wm-form-field name="users" displayname="User" show="true" primary-key="false" generator="assigned" key="users" type="list" is-related="true" required="required" widget="autocomplete" placeholder="Search by Name or Email Address"
+                                                displaylabel="fullName+' ('+email+')'" orderby="fullName:asc" searchkey="fullName,email"></wm-form-field>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
+                                        <wm-gridrow name="gridrow5_1">
+                                            <wm-gridcolumn name="gridcolumn1" columnwidth="12">
+                                                <wm-form-field name="dateSubscribed" displayname="Date Subscribed" show="true" primary-key="false" generator="assigned" key="dateSubscribed" type="timestamp" readonly="readonly" widget="date" maxchars="255"
+                                                defaultvalue="CURRENT_DATE" datepattern="MM-dd-yyyy" placeholder="Select date" outputformat="timestamp"></wm-form-field>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
+                                    </wm-layoutgrid>
+                                    <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="readonly" required="required" step="0" widget="number" inputtype="number" placeholder=""></wm-form-field>
+                                    <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-primary" iconclass="wi wi-save" title="Save" disabled="false" type="submit" update-mode="true"></wm-form-action>
+                                    <wm-form-action key="cancel" display-name="Cancel" show="true" class="form-cancel btn-secondary" iconclass="wi wi-cancel" title="Cancel" action="cancel()" disabled="false" type="button" update-mode="true"></wm-form-action>
+                                </wm-liveform>
+                            </wm-livegrid>
+                        </wm-panel>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+            </wm-layoutgrid>
+        </wm-page-content>
+    </wm-content>
+    <wm-footer content="footer" name="footer1"></wm-footer>
 </wm-page>
