--- a/src/main/webapp/pages/CXAdmin/CXAdmin.html
+++ b/src/main/webapp/pages/CXAdmin/CXAdmin.html
@@ -119,10 +119,10 @@
                         <wm-tile name="statTile" width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_ManageInspections.invoke()">
                             <wm-layoutgrid height="100%" name="layoutgrid11">
                                 <wm-gridrow height="100%" name="gridrow14">
-                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="1.4em unset unset unset" name="gridcolumn31">
+                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="1.4em unset unset unset" name="gridcolumn31" class="col-xs-3">
                                         <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-find-in-page"></wm-icon>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" name="gridcolumn32">
+                                    <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" name="gridcolumn32" class="col-xs-9">
                                         <wm-label name="tileTitleInsp" caption="CX Inspections" class="p" fontsize="1.4" fontunit="em"></wm-label>
                                         <wm-label name="tileStatLabel" caption="bind:Variables.CXAdminInspectionsCount.dataSet.value" fontsize="3" fontunit="em" class="p"></wm-label>
                                     </wm-gridcolumn>
